--- a/index.html
+++ b/index.html
@@ -413,26 +413,27 @@
 
             <!-- Sección 4-->
             <section class="py-5 bg-100">
-                <div class="container pt-4">
+                <div
+                    class="container pt-4">
                     <div class="row">
                         <div class="col-lg-12 mx-auto text-center mb-3">
                             <h1 class="display-3"
-                                style="font-size: 3rem;">Exclusive
-                                <span class="text-danger">deals & discounts</span></h1>
-                            <p class="mb-5 pt-4 fw-medium lh-lg fs-lg-1">Discover
-                                our fantastic early booking
-                                discounts<br
-                                    class="d-none d-xl-block" /> & start
-                                planning your journey.</p>
+                                style="font-size: 3rem;">Best
+                                <span class="text-danger">vacation plan</span></h1>
+                            <p class="mb-5 pt-4 fw-medium lh-lg fs-lg-1">Plan
+                                your perfect vacation with our travel agency.
+                                Choose<br
+                                    class="d-none d-xl-block" />among hundreds
+                                of all-inclusive offers!</p>
                         </div>
                     </div>
                     <div class="row flex-center h-100">
                         <div class="col-lg-12">
-                            <div class="row">
-                                <div class="col-md-3 mb-4">
+                            <div class="row d-flex justify-content-center">
+                                <div class="col-md-4 mb-4">
                                     <div class="card overflow-hidden shadow">
                                         <img class="card-img-top"
-                                            src="img/Image (1).png"
+                                            src="img/viajero1.png"
                                             alt="Rome, Italty" />
                                         <div class="card-body py-4 px-3">
                                             <div
@@ -446,7 +447,7 @@
                                             <div
                                                 class="d-flex align-items-center">
                                                 <img
-                                                    src="img/dest/navigation.svg"
+                                                    src="img/Navigation.png"
                                                     style="margin-right: 14px"
                                                     width="20" alt="navigation" /><span
                                                     class="fs-0 fw-medium">10
@@ -454,10 +455,10 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-md-3 mb-4">
+                                <div class="col-md-4 mb-4">
                                     <div class="card overflow-hidden shadow">
                                         <img class="card-img-top"
-                                            src="img/faro.png"
+                                            src="img/mountain1.png"
                                             alt="Rome, Italty" />
                                         <div class="card-body py-4 px-3">
                                             <div
@@ -465,24 +466,24 @@
                                                 <h4
                                                     class="text-secondary fw-medium"><a
                                                         class="link-900 text-decoration-none stretched-link"
-                                                        href="#!">Rome, Italty</a></h4><span
-                                                    class="fs-1 fw-medium">$5,42k</span>
+                                                        href="#!">London, UK</a></h4><span
+                                                    class="fs-1 fw-medium">$2,42k</span>
                                             </div>
                                             <div
                                                 class="d-flex align-items-center">
                                                 <img
-                                                    src="img/dest/navigation.svg"
+                                                    src="img/Navigation.png"
                                                     style="margin-right: 14px"
                                                     width="20" alt="navigation" /><span
-                                                    class="fs-0 fw-medium">10
+                                                    class="fs-0 fw-medium">07
                                                     Days Trip</span></div>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-md-3 mb-4">
+                                <div class="col-md-4 mb-4">
                                     <div class="card overflow-hidden shadow">
                                         <img class="card-img-top"
-                                            src="img/Image (2).png"
+                                            src="img/playas.png"
                                             alt="Rome, Italty" />
                                         <div class="card-body py-4 px-3">
                                             <div
@@ -490,38 +491,13 @@
                                                 <h4
                                                     class="text-secondary fw-medium"><a
                                                         class="link-900 text-decoration-none stretched-link"
-                                                        href="#!">Rome, Italty</a></h4><span
+                                                        href="#!">Osaka, Japan</a></h4><span
                                                     class="fs-1 fw-medium">$5,42k</span>
                                             </div>
                                             <div
                                                 class="d-flex align-items-center">
                                                 <img
-                                                    src="img/dest/navigation.svg"
-                                                    style="margin-right: 14px"
-                                                    width="20" alt="navigation" /><span
-                                                    class="fs-0 fw-medium">10
-                                                    Days Trip</span></div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-3 mb-4">
-                                    <div class="card overflow-hidden shadow">
-                                        <img class="card-img-top"
-                                            src="img/Image (3).png"
-                                            alt="Rome, Italty" />
-                                        <div class="card-body py-4 px-3">
-                                            <div
-                                                class="d-flex flex-column flex-lg-row justify-content-between mb-3">
-                                                <h4
-                                                    class="text-secondary fw-medium"><a
-                                                        class="link-900 text-decoration-none stretched-link"
-                                                        href="#!">Rome, Italty</a></h4><span
-                                                    class="fs-1 fw-medium">$5,42k</span>
-                                            </div>
-                                            <div
-                                                class="d-flex align-items-center">
-                                                <img
-                                                    src="img/dest/navigation.svg"
+                                                    src="img/Navigation.png"
                                                     style="margin-right: 14px"
                                                     width="20" alt="navigation" /><span
                                                     class="fs-0 fw-medium">10
