--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
                 <div
                     class="container pt-4">
                     <div class="row">
-                        <div class="col-lg-12 mx-auto text-center mb-3">
+                        <div class="col-lg-12 mx-auto text-center">
                             <h1 class="display-3"
                                 style="font-size: 3rem;">Best
                                 <span class="text-danger">vacation plan</span></h1>
@@ -425,6 +425,30 @@
                                 Choose<br
                                     class="d-none d-xl-block" />among hundreds
                                 of all-inclusive offers!</p>
+                        </div>
+                        <div class="d-flex justify-content-end mb-2">
+                            <div
+                                class="d-flex ">
+                                <svg xmlns="http://www.w3.org/2000/svg"
+                                    width="40"
+                                    height="40" fill="currentColor"
+                                    class="bi bi-arrow-left-short arrow__clas"
+                                    viewBox="0 0 16 16">
+                                    <path fill-rule="evenodd"
+                                        d="M12 8a.5.5 0 0 1-.5.5H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5a.5.5 0 0 1 .5.5" />
+                                </svg>
+
+                                <svg xmlns="http://www.w3.org/2000/svg"
+                                    width="40"
+                                    height="40" fill="currentColor"
+                                    class="bi bi-arrow-right-short arrow__clas"
+                                    viewBox="0 0 16 16">
+                                    <path fill-rule="evenodd"
+                                        d="M4 8a.5.5 0 0 1 .5-.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5A.5.5 0 0 1 4 8" />
+                                </svg>
+
+                            </div>
+
                         </div>
                     </div>
                     <div class="row flex-center h-100">
@@ -437,21 +461,38 @@
                                             alt="Rome, Italty" />
                                         <div class="card-body py-4 px-3">
                                             <div
-                                                class="d-flex flex-column flex-lg-row justify-content-between mb-3">
-                                                <h4
+                                                class="d-flex flex-column flex-lg-row justify-content-between mb-3 align-items-center">
+                                                <h3
                                                     class="text-secondary fw-medium"><a
-                                                        class="link-900 text-decoration-none stretched-link"
-                                                        href="#!">Rome, Italty</a></h4><span
-                                                    class="fs-1 fw-medium">$5,42k</span>
+                                                        class="text-decoration-none stretched-link"
+                                                        href="#!">Rome, Italty</a></h3><span
+                                                    class="fs-1 fw-bold text-danger">$5,42k</span>
                                             </div>
+
                                             <div
-                                                class="d-flex align-items-center">
-                                                <img
-                                                    src="img/Navigation.png"
-                                                    style="margin-right: 14px"
-                                                    width="20" alt="navigation" /><span
-                                                    class="fs-0 fw-medium">10
-                                                    Days Trip</span></div>
+                                                class="d-flex justify-content-between">
+                                                <div
+                                                    class="d-flex align-items-center">
+                                                    <img
+                                                        src="img/Navigation.png"
+                                                        style="margin-right: 14px"
+                                                        width="20"
+                                                        alt="navigation" /><span
+                                                        class="fs-0 fw-medium">10
+                                                        Days Trip</span>
+
+                                                </div>
+
+                                                <div
+                                                    class="d-flex align-items-center">
+                                                    <img class="mb-1"
+                                                        src="img/Star.png"
+                                                        style="margin-right: 5px"
+                                                        width="20"
+                                                        alt="start" /><span
+                                                        class="fs-0 fw-medium">4.8</span></div>
+                                            </div>
+
                                         </div>
                                     </div>
                                 </div>
@@ -462,21 +503,36 @@
                                             alt="Rome, Italty" />
                                         <div class="card-body py-4 px-3">
                                             <div
-                                                class="d-flex flex-column flex-lg-row justify-content-between mb-3">
-                                                <h4
+                                                class="d-flex flex-column flex-lg-row justify-content-between mb-3 align-items-center">
+                                                <h3
                                                     class="text-secondary fw-medium"><a
-                                                        class="link-900 text-decoration-none stretched-link"
-                                                        href="#!">London, UK</a></h4><span
-                                                    class="fs-1 fw-medium">$2,42k</span>
+                                                        class="text-decoration-none stretched-link"
+                                                        href="#!">London, UK</a></h3><span
+                                                    class="fs-1 fw-bold text-danger">$2,42k</span>
                                             </div>
                                             <div
-                                                class="d-flex align-items-center">
-                                                <img
-                                                    src="img/Navigation.png"
-                                                    style="margin-right: 14px"
-                                                    width="20" alt="navigation" /><span
-                                                    class="fs-0 fw-medium">07
-                                                    Days Trip</span></div>
+                                                class="d-flex justify-content-between">
+                                                <div
+                                                    class="d-flex align-items-center">
+                                                    <img
+                                                        src="img/Navigation.png"
+                                                        style="margin-right: 14px"
+                                                        width="20"
+                                                        alt="navigation" /><span
+                                                        class="fs-0 fw-medium">10
+                                                        Days Trip</span>
+
+                                                </div>
+
+                                                <div
+                                                    class="d-flex align-items-center">
+                                                    <img class="mb-1"
+                                                        src="img/Star.png"
+                                                        style="margin-right: 5px"
+                                                        width="20"
+                                                        alt="start" /><span
+                                                        class="fs-0 fw-medium">4.7</span></div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -487,21 +543,36 @@
                                             alt="Rome, Italty" />
                                         <div class="card-body py-4 px-3">
                                             <div
-                                                class="d-flex flex-column flex-lg-row justify-content-between mb-3">
-                                                <h4
+                                                class="d-flex flex-column flex-lg-row justify-content-between mb-3 align-items-center">
+                                                <h3
                                                     class="text-secondary fw-medium"><a
-                                                        class="link-900 text-decoration-none stretched-link"
-                                                        href="#!">Osaka, Japan</a></h4><span
-                                                    class="fs-1 fw-medium">$5,42k</span>
+                                                        class="text-decoration-none stretched-link"
+                                                        href="#!">Osaka, Japan</a></h3><span
+                                                    class="fs-1 fw-bold text-danger ">$5,42k</span>
                                             </div>
                                             <div
-                                                class="d-flex align-items-center">
-                                                <img
-                                                    src="img/Navigation.png"
-                                                    style="margin-right: 14px"
-                                                    width="20" alt="navigation" /><span
-                                                    class="fs-0 fw-medium">10
-                                                    Days Trip</span></div>
+                                                class="d-flex justify-content-between">
+                                                <div
+                                                    class="d-flex align-items-center">
+                                                    <img
+                                                        src="img/Navigation.png"
+                                                        style="margin-right: 14px"
+                                                        width="20"
+                                                        alt="navigation" /><span
+                                                        class="fs-0 fw-medium">10
+                                                        Days Trip</span>
+
+                                                </div>
+
+                                                <div
+                                                    class="d-flex align-items-center">
+                                                    <img class="mb-1"
+                                                        src="img/Star.png"
+                                                        style="margin-right: 5px"
+                                                        width="20"
+                                                        alt="start" /><span
+                                                        class="fs-0 fw-medium">4.8</span></div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
