--- a/index.html
+++ b/index.html
@@ -761,7 +761,7 @@
                         <div class="col-lg-12">
                             <div class="row">
                                 <div class="col-md-3 mb-4">
-                                    <div class="card overflow-hidden">
+                                    <div class="card overflow-hidden bg-main">
                                         <img class="card-img-top"
                                             src="img/Image (1).png"
                                             alt="Rome, Italty" />
@@ -806,7 +806,7 @@
                                 </div>
 
                                 <div class="col-md-3 mb-4">
-                                    <div class="card overflow-hidden">
+                                    <div class="card overflow-hidden bg-main">
                                         <img class="card-img-top"
                                             src="img/faro.png"
                                             alt="Rome, Italty" />
@@ -851,7 +851,7 @@
                                 </div>
 
                                 <div class="col-md-3 mb-4">
-                                    <div class="card overflow-hidden shadow">
+                                    <div class="card overflow-hidden bg-main">
                                         <img class="card-img-top"
                                             src="img/Image (2).png"
                                             alt="Rome, Italty" />
@@ -896,7 +896,7 @@
                                 </div>
 
                                 <div class="col-md-3 mb-4">
-                                    <div class="card overflow-hidden shadow">
+                                    <div class="card overflow-hidden bg-main">
                                         <img class="card-img-top"
                                             src="img/Image (3).png"
                                             alt="Rome, Italty" />
