organizando sección form

--- a/index.html
+++ b/index.html
@@ -782,7 +782,7 @@
                         </div>
                     </div>
                     <div class="row flex-center h-100">
-                        <div class="col-lg-12">
+                        <div class="col-lg-12 d-flex justify-content-center">
                             <div class="row">
                                 <div class="col-md-3 mb-4">
                                     <div
@@ -909,32 +909,68 @@
                                 </div>
 
                             </div>
+                            <div
+                                class="carousel-indicators col-lg-12">
+                                <button class="false" type="button"
+                                    data-bs-target="#latestBlogIndicator"
+                                    data-bs-slide-to="0" aria-current="true"
+                                    aria-label="Indicator 0"></button>
+                                <button class="active bg-danger" type="button"
+                                    data-bs-target="#latestBlogIndicator"
+                                    data-bs-slide-to="1" aria-current="true"
+                                    aria-label="Indicator 1"></button>
+                                <button class="false" type="button"
+                                    data-bs-target="#latestBlogIndicator"
+                                    data-bs-slide-to="2" aria-current="true"
+                                    aria-label="Indicator 2"></button>
+                            </div>
+                        </div>
 
+                    </div>
+                </div>
+
+            </section>
+
+            <!--Sección 7-->
+
+            <section class="pt-6">
+
+                <div class="container">
+                    <div class="py-8 px-5 position-relative text-center"
+                        style="background-color: rgba(248, 113, 65);border-radius: 15px;">
+
+                        <div class="position-absolute end-0 top-0 z-index--1">
+                            <img src="img/shape-bg2.png" width="264"
+                                alt="cta shape" /></div>
+                        <div
+                            class="position-absolute start-0 bottom-0 ms-3 z-index--2 d-none d-sm-block">
+                            <img src="img/shape-bg1.png"
+                                style="max-width: 340px;"
+                                alt="cta shape" /></div>
+                        <div class="row justify-content-center">
+                            <div class="col-lg-8 col-md-10">
+                                <h2 class="text-secondary lh-1-7 mb-7">Subscribe
+                                    and get exclusive deals & oofer</h2>
+                                <form
+                                    class="row g-3 align-items-center w-lg-75 mx-auto">
+                                    <div class="col-sm">
+                                        <div class="input-group">
+                                            <input
+                                                class="form-control form-little-squirrel-control"
+                                                type="email"
+                                                placeholder="Enter your email"
+                                                aria-label="email">
+                                            <button
+                                                class="btn btn-danger orange-gradient-btn fs--1"
+                                                type="button">Subscribe</button>
+                                        </div>
+                                    </div>
+                                </form>
+
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="d-flex justify-content-center my-4">
-                    <div
-                        class="d-flex align-items-center justify-content-center">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="40"
-                            height="40" fill="currentColor"
-                            class="bi bi-arrow-left-short arrow__clas"
-                            viewBox="0 0 16 16">
-                            <path fill-rule="evenodd"
-                                d="M12 8a.5.5 0 0 1-.5.5H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5a.5.5 0 0 1 .5.5" />
-                        </svg>
-
-                        <svg xmlns="http://www.w3.org/2000/svg" width="40"
-                            height="40" fill="currentColor"
-                            class="bi bi-arrow-right-short arrow__clas"
-                            viewBox="0 0 16 16">
-                            <path fill-rule="evenodd"
-                                d="M4 8a.5.5 0 0 1 .5-.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5A.5.5 0 0 1 4 8" />
-                        </svg>
-
-                    </div>
-
-                </div>
+                </div><!-- end of .container-->
 
             </section>
 
