--- a/index.html
+++ b/index.html
@@ -939,8 +939,8 @@
                     <div class="py-8 px-5 position-relative text-center"
                         style="background-color: rgba(248, 113, 65);border-radius: 15px;">
 
-                        <div class="position-absolute end-0 top-0 z-index--1">
-                            <img src="img/shape-bg2.png" width="264"
+                        <div class="position-absolute end-0 top-0 z-index--2">
+                            <img src="img/shape-bg3.png" width="130"
                                 alt="cta shape" /></div>
                         <div
                             class="position-absolute start-0 bottom-0 ms-3 z-index--2 d-none d-sm-block">
@@ -949,23 +949,25 @@
                                 alt="cta shape" /></div>
                         <div class="row justify-content-center">
                             <div class="col-lg-8 col-md-10">
-                                <h2 class="text-secondary lh-1-7 mb-7">Subscribe
-                                    and get exclusive deals & oofer</h2>
-                                <form
-                                    class="row g-3 align-items-center w-lg-75 mx-auto">
-                                    <div class="col-sm">
-                                        <div class="input-group">
-                                            <input
-                                                class="form-control form-little-squirrel-control"
-                                                type="email"
-                                                placeholder="Enter your email"
-                                                aria-label="email">
-                                            <button
-                                                class="btn btn-danger orange-gradient-btn fs--1"
-                                                type="button">Subscribe</button>
-                                        </div>
-                                    </div>
-                                </form>
+                                <h1
+                                    class="text-white fs-6  lh-1-7 mb-7 fw-bold">Subscribe
+                                    and get exclusive<br
+                                        class="d-none d-xl-block" /> deals &
+                                    oofer</h1>
+                                <div
+                                    class="position-relative mx-auto d-flex align-items-center"
+                                    style="max-width: 500px;">
+                                    <img
+                                        class="input-box position-absolute start-0 ms-2"
+                                        src="img/mail.svg"
+                                        width="17" alt="mail" />
+                                    <input
+                                        class="form-control w-100 py-3 ps-4 pe-5"
+                                        type="text"
+                                        placeholder="Enter your email">
+                                    <button type="button"
+                                        class="btn btn-danger py-2 px-3 position-absolute top-0 end-0 mt-2 me-2">Subscribe</button>
+                                </div>
 
                             </div>
                         </div>
