--- a/index.html
+++ b/index.html
@@ -931,7 +931,7 @@
 
             </section>
 
-            <!--Sección 7-->
+            <!--Sección 7 subscribe-->
 
             <section class="pt-6">
 
@@ -972,9 +972,115 @@
                             </div>
                         </div>
                     </div>
-                </div><!-- end of .container-->
+                </div>
 
             </section>
+
+            <!--Sección 8 footer-->
+
+            <section class="pb-0 pb-lg-4">
+
+                <!--Falta organizar iconos redes sociales debajo del primer <p>-->
+
+                <div class="container">
+                    <div class="row">
+                        <div
+                            class="col-lg-3 col-md-7 col-12 mb-4 mb-md-6 mb-lg-0 order-0">
+                            <img class="mb-4" src="img/Logo.png"
+                                width="130" alt="jadoo" />
+                            <p class="fs--1 text-secondary mb-0 fw-medium">Book
+                                your trip in minute, get full Control for much
+                                longer.</p>
+
+                            <div
+                                class="col-lg-3 col-md-5 col-12 mb-4 mb-md-6 mb-lg-0 order-lg-4 order-md-1">
+                                <div class="icon-group mb-4"> <a
+                                        class="text-decoration-none icon-item shadow-social"
+                                        id="facebook" href="#!"><i
+                                            class="fab fa-facebook-f">
+                                        </i></a><a
+                                        class="text-decoration-none icon-item shadow-social"
+                                        id="instagram" href="#!"><i
+                                            class="fab fa-instagram"> </i></a><a
+                                        class="text-decoration-none icon-item shadow-social"
+                                        id="twitter" href="#!"><i
+                                            class="fab fa-twitter">
+                                        </i></a></div>
+
+                            </div>
+
+                        </div>
+
+                        <!--Hasta aquí por ordenar sección social network-->
+
+                        <div
+                            class="col-lg-2 col-md-4 mb-4 mb-lg-0 order-lg-1 order-md-2">
+                            <h4
+                                class="footer-heading-color fw-bold font-sans-serif mb-3 mb-lg-4">Company</h4>
+                            <ul class="list-unstyled mb-0">
+                                <li class="mb-2"><a
+                                        class="link-900 fs-1 fw-medium text-decoration-none"
+                                        href="#!">About</a></li>
+                                <li class="mb-2"><a
+                                        class="link-900 fs-1 fw-medium text-decoration-none"
+                                        href="#!">Careers</a></li>
+                                <li class="mb-2"><a
+                                        class="link-900 fs-1 fw-medium text-decoration-none"
+                                        href="#!">Logistic</a></li>
+                                <li class="mb-2"><a
+                                        class="link-900 fs-1 fw-medium text-decoration-none"
+                                        href="#!">Privacy & Policy</a></li>
+                            </ul>
+                        </div>
+                        <div
+                            class="col-lg-2 col-md-4 mb-4 mb-lg-0 order-lg-2 order-md-3">
+                            <h4
+                                class="footer-heading-color fw-bold font-sans-serif mb-3 mb-lg-4">Contact</h4>
+                            <ul class="list-unstyled mb-0">
+                                <li class="mb-2"><a
+                                        class="link-900 fs-1 fw-medium text-decoration-none"
+                                        href="#!">Help/FAQ</a></li>
+                                <li class="mb-2"><a
+                                        class="link-900 fs-1 fw-medium text-decoration-none"
+                                        href="#!">Press</a></li>
+                                <li class="mb-2"><a
+                                        class="link-900 fs-1 fw-medium text-decoration-none"
+                                        href="#!">Affiliates</a></li>
+                            </ul>
+                        </div>
+                        <div
+                            class="col-lg-2 col-md-4 mb-4 mb-lg-0 order-lg-3 order-md-4">
+                            <h4
+                                class="footer-heading-color fw-bold font-sans-serif mb-3 mb-lg-4">More</h4>
+                            <ul class="list-unstyled mb-0">
+                                <li class="mb-2"><a
+                                        class="link-900 fs-1 fw-medium text-decoration-none"
+                                        href="#!">Press Centre</a></li>
+                                <li class="mb-2"><a
+                                        class="link-900 fs-1 fw-medium text-decoration-none"
+                                        href="#!">Our Blog</a></li>
+                                <li class="mb-2"><a
+                                        class="link-900 fs-1 fw-medium text-decoration-none"
+                                        href="#!">Low fare tips</a></li>
+                            </ul>
+                        </div>
+
+                    </div>
+                </div>
+
+            </section>
+
+            <!--footer end-->
+
+            <div
+                class="py-5 text-center d-flex justify-content-between align-items-center mx-7 card-footer-top">
+                <p class="mb-0 text-secondary fs--1 fw-medium">Copyright,
+                    Trabook 2023. All rights reserved. </p>
+                <p class="mb-0 text-secondary fs--1 fw-medium"><a
+                        class="link-900 text-decoration-none" href="#">Term
+                        & Conditions</a></p>
+
+            </div>
 
         </main>
 
