task end - all codes

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <!-- Bootstrap CSS
         <link rel="stylesheet" href="styles__css/bootstrap.css">-->
         <link rel="stylesheet" href="styles__css/styles_bootstrap.css">
+        <link rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
         <!--Styles CSS-->
         <link rel="stylesheet" href="styles__css/styles.css">
         <!-- Fonts Google-->
@@ -993,21 +995,47 @@
                                 longer.</p>
 
                             <div
-                                class="col-lg-3 col-md-5 col-12 mb-4 mb-md-6 mb-lg-0 order-lg-4 order-md-1">
-                                <div class="icon-group mb-4"> <a
+                                class="col-lg-2 col-md-5 mb-4 mb-md-6 mb-lg-0 order-lg-4 order-md-1 ">
+                                <div class="icon-group mb-4 mt-3">
+                                    <!--Icon Facebook-->
+                                    <a
                                         class="text-decoration-none icon-item shadow-social"
-                                        id="facebook" href="#!"><i
-                                            class="fab fa-facebook-f">
-                                        </i></a><a
+                                        id="facebook" href="#!"><svg
+                                            xmlns="http://www.w3.org/2000/svg"
+                                            x="0px" y="0px" width="50"
+                                            height="20" viewBox="0 0 30 30">
+                                            <path
+                                                d="M12,27V15H8v-4h4V8.852C12,4.785,13.981,3,17.361,3c1.619,0,2.475,0.12,2.88,0.175V7h-2.305C16.501,7,16,7.757,16,9.291V11 h4.205l-0.571,4H16v12H12z"></path>
+                                        </svg></a>
+
+                                    <!--Icon Instagram-->
+                                    <a
                                         class="text-decoration-none icon-item shadow-social"
-                                        id="instagram" href="#!"><i
-                                            class="fab fa-instagram"> </i></a><a
+                                        id="instagram" href="#!"><svg
+                                            xmlns="http://www.w3.org/2000/svg"
+                                            x="0px" y="0px" width="50"
+                                            height="20" viewBox="0 0 50 50">
+                                            <path
+                                                d="M 16 3 C 8.8324839 3 3 8.8324839 3 16 L 3 34 C 3 41.167516 8.8324839 47 16 47 L 34 47 C 41.167516 47 47 41.167516 47 34 L 47 16 C 47 8.8324839 41.167516 3 34 3 L 16 3 z M 16 5 L 34 5 C 40.086484 5 45 9.9135161 45 16 L 45 34 C 45 40.086484 40.086484 45 34 45 L 16 45 C 9.9135161 45 5 40.086484 5 34 L 5 16 C 5 9.9135161 9.9135161 5 16 5 z M 37 11 A 2 2 0 0 0 35 13 A 2 2 0 0 0 37 15 A 2 2 0 0 0 39 13 A 2 2 0 0 0 37 11 z M 25 14 C 18.936712 14 14 18.936712 14 25 C 14 31.063288 18.936712 36 25 36 C 31.063288 36 36 31.063288 36 25 C 36 18.936712 31.063288 14 25 14 z M 25 16 C 29.982407 16 34 20.017593 34 25 C 34 29.982407 29.982407 34 25 34 C 20.017593 34 16 29.982407 16 25 C 16 20.017593 20.017593 16 25 16 z"></path>
+                                        </svg></a>
+
+                                    <!--Icon Twitter-->
+                                    <a
                                         class="text-decoration-none icon-item shadow-social"
-                                        id="twitter" href="#!"><i
-                                            class="fab fa-twitter">
-                                        </i></a></div>
+                                        id="twitter" href="#!"><svg
+                                            xmlns="http://www.w3.org/2000/svg"
+                                            x="0px" y="0px" width="50"
+                                            height="20" viewBox="0 0 24 24">
+                                            <path
+                                                d="M22,3.999c-0.78,0.463-2.345,1.094-3.265,1.276c-0.027,0.007-0.049,0.016-0.075,0.023c-0.813-0.802-1.927-1.299-3.16-1.299 c-2.485,0-4.5,2.015-4.5,4.5c0,0.131-0.011,0.372,0,0.5c-3.353,0-5.905-1.756-7.735-4c-0.199,0.5-0.286,1.29-0.286,2.032 c0,1.401,1.095,2.777,2.8,3.63c-0.314,0.081-0.66,0.139-1.02,0.139c-0.581,0-1.196-0.153-1.759-0.617c0,0.017,0,0.033,0,0.051 c0,1.958,2.078,3.291,3.926,3.662c-0.375,0.221-1.131,0.243-1.5,0.243c-0.26,0-1.18-0.119-1.426-0.165 c0.514,1.605,2.368,2.507,4.135,2.539c-1.382,1.084-2.341,1.486-5.171,1.486H2C3.788,19.145,6.065,20,8.347,20 C15.777,20,20,14.337,20,8.999c0-0.086-0.002-0.266-0.005-0.447C19.995,8.534,20,8.517,20,8.499c0-0.027-0.008-0.053-0.008-0.08 c-0.003-0.136-0.006-0.263-0.009-0.329c0.79-0.57,1.475-1.281,2.017-2.091c-0.725,0.322-1.503,0.538-2.32,0.636 C20.514,6.135,21.699,4.943,22,3.999z"></path>
+                                        </svg></a>
+                                </div>
 
                             </div>
+
+                        </div>
+
+                        <div class="col-lg-3">
 
                         </div>
 
